<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:gravity="center"
    tools:context="com.example.gerdaumanagement.gerdaumanagement.MainActivity"
    android:orientation="vertical">



        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.02"
            app:srcCompat="@drawable/logo" />


        <EditText
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gerdautitulo1"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.00"
            android:cursorVisible="true"
            android:ems="9"
            android:fontFamily="sans-serif"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignStart="@+id/usuario"
            android:layout_below="@+id/usuario"
            android:ems="9"
            android:fontFamily="sans-serif"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.01"
            android:onClick="recuperarSenha"
            android:text="@string/recuperarSenha"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logar"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/senha"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:background="@drawable/gradiente_azul"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="entrarSistema"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:textScaleX="1.3"
            android:textSize="20dp" />



</LinearLayout>




